allowed more than 5 lists by enabling expanding in the x direction, had to remove the footer as it was interfering with the bottom scrollbar (issue #25)

--- a/src/scss/list.scss
+++ b/src/scss/list.scss
@@ -1,16 +1,21 @@
 .list-container {
     display: flex;
     overflow: hidden;
-    padding: 0 8px 31px;
+    overflow-x: auto;
+    padding: 0 5px;
+    flex-grow: 1;
+    align-items: flex-start;
+
     .list {
         border-radius: 4px;
         display: flex;
-        flex-basis: 0;
+        flex-basis: 1;
         flex-direction: column;
         flex-grow: 1;
-        margin-right: 8px;
+        margin-right: 5px;
         max-height: 100%;
         max-width: 30vw;
+        min-width: 314px;
         .list-header {
             border-top-left-radius: 4px;
             border-top-right-radius: 4px;
@@ -157,6 +162,8 @@
         cursor: pointer;
         font-weight: 700;
         padding: 8px 12px;
+        flex-shrink: 0;
+        margin-right: 5px;
     }
 }
 .theme-default {
